frontend/test/should_fail/new_match_class.grg
rule r
{
	modify {
	---
		exec({::x = new match<class Furchtbar>()});
	}
}
